# libConstrSystm

./: .gitignore  Doxyfile  LICENSE  Makefile  configure.ac
src/: Flots.cpp  LinearCstr.cpp  LinearCstr.h  LinearExpr.cpp  LinearExpr.h  LinearSyst.cpp  LinearSyst.h  Makefile.am  Utilities.cpp  Utilities.h  Variables.cpp  Variables.h  lps.cpp  lps.h
